# Kazia

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  main.cpp
src/core/: AssetManager.cpp  AssetManager.h  CameraController.cpp  CameraController.h  FilamentEngine.cpp  FilamentEngine.h  GltfLoader.cpp  GltfLoader.h  MaterialManager.cpp  MaterialManager.h  Math.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ThreadPool.cpp  ThreadPool.h
src/editor/: CommandManager.cpp  CommandManager.h  CreateNodeCommand.cpp  CreateNodeCommand.h  DeleteNodeCommand.cpp  DeleteNodeCommand.h  Gizmo.cpp  Gizmo.h  ICommand.h  MoveGizmo.cpp  MoveGizmo.h  PickingManager.cpp  PickingManager.h  RotateGizmo.cpp  RotateGizmo.h  ScaleGizmo.cpp  ScaleGizmo.h  TransformCommand.cpp  TransformCommand.h
src/plugin/: IPlugin.h  PluginManager.cpp  PluginManager.h
src/render/: CameraController.cpp  CameraController.h  FilamentEntityMapper.cpp  FilamentEntityMapper.h  FilamentRenderer.cpp  IRenderer.h  LightSystem.cpp  LightSystem.h  RenderContext.h
src/scene/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  Node.cpp  Node.h  Scene.cpp  Scene.h  SelectionManager.cpp  SelectionManager.h  TransformComponent.cpp  TransformComponent.h
src/ui/: DockTitleBar.cpp  DockTitleBar.h  MainWindow.cpp  MainWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  RenderWidget.cpp  RenderWidget.h  SceneTree.cpp  SceneTree.h  TitleBar.cpp  TitleBar.h  styles.qss
src/utils/: Logger.cpp  Logger.h
